@@ -1,3 +1,9 @@
+2002-02-17  Bradford Hovinen  <hovinen@ximian.com>
+
+	* background-properties-capplet.c (main)
+	(dialog_button_clicked_cb): Switch to instant apply; remove apply
+	button
+
 2002-02-12  Lauris Kaplinski  <lauris@ximian.com>
 
 	* background-properties-capplet.c (dialog_button_clicked_cb): Use
